<resources>
    <string name="app_name">My Photo Album</string>
    <string name="home">HOME</string>
    <string name="search">SEARCH</string>
    <string name="edit">EDIT</string>
    <string name="delete">DELETE</string>
    <string name="move">MOVE</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>